@@ -100,7 +100,7 @@ public class MsalBrokerRequestAdapter implements IBrokerRequestAdapter {
                 .scope(TextUtils.join(" ", parameters.getScopes()))
                 .redirect(parameters.getRedirectUri())
                 .clientId(parameters.getClientId())
-                .childRedirect(parameters.getChildRedirectUri())
+                .childRedirectUri(parameters.getChildRedirectUri())
                 .childClientId(parameters.getChildClientId())
                 .userName(parameters.getLoginHint())
                 .extraQueryStringParameter(extraQueryStringParameter)
@@ -176,7 +176,7 @@ public class MsalBrokerRequestAdapter implements IBrokerRequestAdapter {
                 .redirect(parameters.getRedirectUri())
                 .extraOptions(extraOptions)
                 .clientId(parameters.getClientId())
-                .childRedirect(parameters.getChildRedirectUri())
+                .childRedirectUri(parameters.getChildRedirectUri())
                 .childClientId(parameters.getChildClientId())
                 .homeAccountId(parameters.getAccount().getHomeAccountId())
                 .localAccountId(parameters.getAccount().getLocalAccountId())
