@@ -24,6 +24,7 @@ V.16.0.0
 - [MINOR] Send key to request broker data in all BrokerOperationBundle (#2159)
 - [MINOR] Catch strongbox exception on Android 14 (#2158)
 - [MINOR] WebAuthnJsonUtil; giving default value for UserVerificationPolicy (#2172)
+- [MINOR] Nested app auth implementation (#2168)
 
 V.15.0.0
 ----------
